# mammoth_intro_ai

./: .gitattributes  .gitignore  Makefile  agent_lessons.patch  llama_service.py  main.py  migrate_to_enterprise_layout.py  migrate_v2.ps1  pyproject.toml  pytest.ini  requirements.txt  setup.ps1  supabase_client.py  test_env.py  test_lessons.py  utils.py
.github/scripts/: SECComp_TUNER.md  apply_suggestion_and_create_pr.py  ci_seccomp_tuner.py  run_sandbox_test.py
.github/workflows/: ci.yml  python-tests.yml
.mammoth/: seccomp.json
cli/: main.py
docs/: implementation_status_and_next_steps.md
src/mammoth_os/: adaptive_engine.py  agent_registry.py  atlas_sync.py  autonomous_engine.py  autonomous_task_engine.py  community_engine.py  compute_engine.py  core_types.py  curriculum_engine.py  embedding_engine.py  engine_registry.py  entrypoint.py  event_bus_engine.py  exercise_generator.py  ingest_vector_store.py  insight_engine.py  io_engine.py  leaderboard_engine.py  llm_client.py  llm_parsing.py  memory_engine.py  openai_adapter.py  pipeline_engine.py  prompt_templates.py  reasoning_engine.py  sandbox_runner.py  session_engine.py  streak_engine.py  supabase_client.py  synthesis_engine.py  test_coding_agent_retrieval.py  test_curriculum_agent.py  test_curriculum_agent_edgecases.py  test_exercise_generator.py  test_planner_agent.py  test_sandbox_runner.py  (+3 more)
tests/: conftest.py  system_check.py  test_brand_voice_generate_copy.py  test_env.py  test_leaderboard.py  test_lessons.py  test_router_integration.py  test_streak.py
tools/: quick_smoke_test.py  run_scenario.py
(+51 files in other folders)
